--- a/homework3/index.html
+++ b/homework3/index.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>2022homework3</title>
-	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<title>文化美食大聯盟</title>
+	<link rel="stylesheet" href="C:\Users\Tanya\Desktop\選修-數位敘事與應用\homework3\css/style.css" type="text/css">
 </head>
 <body>
 	<div id="page">
@@ -36,7 +36,7 @@
 		<div id="contents">
 			<div id="adbox">
 				<div>
-					<img src="images/index.jpg" alt="Img" height="390" width="632">
+					<img src="C:\Users\Tanya\Desktop\選修-數位敘事與應用/homework3/images/index.jpg" alt="Img" height="390" width="632">
 					<h1><U>聯盟說明</U></h1>
 					<h4>行政院國家科學委員會為促使大專校院及學術研究機構有效運用研發能量，以其已建立之核心技術與相關之上中下游產業界建構技術合作聯盟，希冀藉由業界的參與共同組成會員形式之產學技術聯盟，有效落實產學之間互動，提昇業界競爭能力。
 					<br>
